--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy
-scipy
+numpy==1.13.3
+scipy==0.19.1
 jupyter
-matplotlib
+matplotlib==2.1.0
 Pillow
-scikit-learn
-tensorflow-gpu
-edward
+scikit-learn==0.19.1
+tensorflow-gpu==1.4.0
+edward==1.3.4
